--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<!DOCTYPE html><html><head><title>Support Site V3</title></head><body><h1>Placeholder</h1></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>You Shall Not Pass</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body class="splash">
+    <div class="overlay hidden" id="overlay">
+        <h1>...unless you have the password.</h1>
+        <input type="password" id="password" placeholder="Enter password" />
+        <button onclick="checkPassword()">Enter</button>
+    </div>
+    <script src="splash.js"></script>
+    <script>
+        setTimeout(() => {
+            document.getElementById("overlay").classList.remove("hidden");
+            document.getElementById("overlay").classList.add("visible");
+        }, 5000);
+    </script>
+</body>
+</html>
