--- a/index.html
+++ b/index.html
@@ -4,21 +4,55 @@
 <head>
     <meta charset="UTF-8">
     <title>You Shall Not Pass</title>
-    <link rel="stylesheet" href="style.css">
     <style>
-        .fade {
+        body.splash {
+            margin: 0;
+            padding: 0;
+            background: url('assets/Gandolf.gif') no-repeat center center fixed;
+            background-size: cover;
+            font-family: Arial, sans-serif;
+        }
+        .overlay {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: rgba(255, 255, 255, 0.95);
+            padding: 2em;
+            border-radius: 10px;
+            text-align: center;
+            opacity: 0;
             transition: opacity 1.5s ease-in-out;
         }
-        .hidden {
-            opacity: 0;
+        .overlay h1 {
+            margin-bottom: 1em;
+            font-size: 1.5em;
         }
-        .visible {
+        .overlay input {
+            padding: 0.5em;
+            font-size: 1em;
+            margin-bottom: 1em;
+            width: 80%;
+        }
+        .overlay button {
+            padding: 0.5em 1.5em;
+            font-size: 1em;
+            background-color: #0a662e;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        .overlay.visible {
             opacity: 1;
+        }
+        .overlay.hidden {
+            opacity: 0;
         }
     </style>
 </head>
 <body class="splash">
-    <div class="overlay fade hidden" id="overlay">
+    <div class="overlay hidden" id="overlay">
         <h1>...unless you have the password.</h1>
         <input type="password" id="password" placeholder="Enter password" />
         <button onclick="checkPassword()">Enter</button>
