--- a/real.html
+++ b/real.html
@@ -2,153 +2,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Support Evidence – SideCode Gigs</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            font-family: Arial, Calibri, sans-serif;
-            margin: 0;
-            padding: 0;
-            background: white;
-            color: #222;
-        }
-        section {
-            max-width: 800px;
-            margin: 2em auto;
-            padding: 0 1em;
-        }
-        h1, h2 {
-            text-align: center;
-        }
-        .section-divider {
-            background: #81c784;
-            color: black;
-            padding: 0.75em;
-            font-weight: bold;
-            text-align: center;
-            max-width: 800px;
-            margin: 3em auto 1em;
-        }
-        .caption {
-            text-align: center;
-            font-style: italic;
-            margin-bottom: 1em;
-        }
-        .image-grid {
-            display: flex;
-            flex-direction: column;
-            gap: 1em;
-        }
-        .carousel {
-            display: flex;
-            overflow-x: auto;
-            gap: 1em;
-            padding: 1em 0;
-        }
-        .carousel img {
-            flex: 0 0 auto;
-            max-height: 300px;
-            cursor: pointer;
-        }
-        .downloads {
-            list-style: none;
-            padding: 0;
-            text-align: center;
-        }
-        .downloads li {
-            margin: 0.5em 0;
-        }
-        .downloads a {
-            background: #81c784;
-            color: black;
-            padding: 0.5em 1em;
-            border-radius: 5px;
-            text-decoration: none;
-        }
-        footer {
-            text-align: center;
-            font-size: 0.9em;
-            color: #444;
-            margin: 2em 0;
-        }
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 100;
-            left: 0; top: 0;
-            width: 100%; height: 100%;
-            background-color: rgba(0, 0, 0, 0.9);
-        }
-        .modal-content {
-            display: block;
-            max-width: 90%;
-            max-height: 90%;
-            margin: 5% auto;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <title>Support Evidence Hub</title>
+  <link rel="stylesheet" href="assets/style.css" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      font-size: 1.4em;
+    }
+    .section-divider {
+      background-color: #4CAF50;
+      color: white;
+      padding: 1em;
+      margin-top: 2em;
+      font-weight: bold;
+      border-radius: 5px;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      margin-top: 1em;
+      cursor: pointer;
+    }
+    .download-links {
+      margin-top: 2em;
+    }
+    .download-links a {
+      display: inline-block;
+      margin-right: 1em;
+      background: #0a662e;
+      color: white;
+      padding: 0.5em 1em;
+      border-radius: 5px;
+      text-decoration: none;
+    }
+    .wizard-link {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
-    <section>
-        <h1>Support Site: Evidence for Loan and Retraining</h1>
-        <p>This site was built in under 5 hours to transparently show key financial, career, and training information in support of a private family loan. All documents are real and personal.</p>
-    </section>
+  <div class="section-divider">📄 Halifax Evidence</div>
+  <img src="assets/images/01-halifax-mortgage.png" alt="Halifax Mortgage" />
+  <img src="assets/images/02-halifax-equity.png" alt="Halifax Equity" />
 
-    <div class="section-divider">Mortgage & Equity Evidence</div>
-    <section>
-        <p class="caption">These screenshots show my Halifax mortgage balance, equity position, and monthly outgoings — supporting loan affordability.</p>
-        <div class="image-grid">
-            <img src="assets/images/01-halifax-mortgage.png" alt="Halifax Mortgage">
-            <img src="assets/images/02-halifax-equity.png" alt="Halifax Equity">
-        </div>
-    </section>
+  <div class="section-divider">📋 Job Offers</div>
+  <img src="assets/images/03-job-offer-ryan.png" alt="Job Offer Ryan" />
+  <img src="assets/images/04-job-offer-ian-1.png" alt="Job Offer Ian 1" />
+  <img src="assets/images/05-job-offer-ian-2.png" alt="Job Offer Ian 2" />
 
-    <div class="section-divider">Job Offers</div>
-    <section>
-        <p class="caption">These real job offers show strong demand for Microsoft Copilot trainers — supporting my career move and repayment plan.</p>
-        <div class="carousel">
-            <img src="assets/images/03-job-offer-ryan.png" alt="Job Offer Ryan">
-            <img src="assets/images/04-job-offer-ian-1.png" alt="Job Offer Ian 1">
-            <img src="assets/images/05-job-offer-ian-2.png" alt="Job Offer Ian 2">
-            <img src="assets/images/08-job-offer-freelance.png" alt="Freelance Copilot Trainer">
-        </div>
-    </section>
+  <div class="section-divider">📈 Training Costs</div>
+  <img src="assets/images/06-training-costs.png" alt="Training Costs" />
 
-    <div class="section-divider">Training Costs</div>
-    <section>
-        <p class="caption">The image below shows the cost of PL-900, PL-200, PL-400, and Train the Trainer certification — evidence of my financial investment in retraining.</p>
-        <img src="assets/images/06-training-costs.png" alt="Training bundle pricing table" style="width: 100%; max-width: 100%;">
-    </section>
+  <div class="section-divider">🐶 Roger’s Dentist</div>
+  <img src="assets/images/07-roger-dentist.jpeg" alt="Roger Looking Out" />
 
-    <div class="section-divider">Roger the Dog</div>
-    <section>
-        <p class="caption">Roger — who needs a doggie dentist — represents what we're also trying to protect. Family, wellbeing, and forward planning.</p>
-        <img src="assets/images/07-roger-dentist.jpeg" alt="Roger looking out car window" style="max-width:600px; width:100%; display:block; margin:auto;">
-    </section>
+  <div class="section-divider">📂 Sample Documents</div>
+  <div class="download-links">
+    <a href="assets/downloads/deed-of-trust.pdf" download>Deed of Trust (PDF)</a>
+    <a href="assets/downloads/loan-agreement.pdf" download>Loan Agreement (PDF)</a>
+  </div>
 
-    <div class="section-divider">Document Downloads</div>
-    <section>
-        <p class="caption">These are example documents that outline the loan and property-based support agreements being proposed.</p>
-        <ul class="downloads">
-            <li><a href="assets/downloads/loan-agreement.pdf" download>📄 Loan Agreement</a></li>
-            <li><a href="assets/downloads/deed-of-trust.pdf" download>📄 Deed of Trust</a></li>
-        </ul>
-    </section>
-
-    <footer>
-        <p>© SideCode Gigs – Built fast, shared with purpose. No other claims made.</p>
-    </footer>
-
-    <div id="imgModal" class="modal" onclick="this.style.display='none'">
-        <img class="modal-content" id="modalImage">
-    </div>
-    <script>
-        document.querySelectorAll('img').forEach(img => {
-            img.addEventListener('click', () => {
-                document.getElementById('modalImage').src = img.src;
-                document.getElementById('imgModal').style.display = 'block';
-            });
-        });
-    </script>
+  <img src="assets/images/wizard.png" class="wizard-link" alt="Wizard" onclick="window.location.href='loan-details.html'" />
 </body>
 </html>
