--- a/loan-details.html
+++ b/loan-details.html
@@ -9,6 +9,8 @@
       font-family: Arial, sans-serif;
       font-size: 1.4em;
       padding: 2em;
+      max-width: 900px;
+      margin: auto;
     }
     .section-divider {
       background-color: #4CAF50;
@@ -17,6 +19,9 @@
       margin: 2em 0 1em;
       font-weight: bold;
       border-radius: 5px;
+    }
+    ul {
+      margin-left: 1.5em;
     }
     .back-link {
       position: fixed;
@@ -29,44 +34,62 @@
 <body>
   <img src="assets/images/wizard.png" class="back-link" alt="Back" onclick="window.location.href='real.html'" />
   <div class="section-divider">🔍 Current Setup (Premium Bonds vs Halifax Mortgage)</div>
-  <p>D’s Current Situation:
-    • £50,000 in Premium Bonds
-    • Capital: Fully protected.
-    • Returns: Based on prize draws (~3.3% annually)
-    • Odds: 1 in 21,000
-    • Access: 3–5 working days, penalty-free</p>
+  <ul>
+    <li><strong>£50,000 in Premium Bonds</strong></li>
+    <li>Capital: Fully protected</li>
+    <li>Returns: Based on monthly prize draws (~3.3% expected)</li>
+    <li>Odds of winning with a £25 bond: 1 in 21,000</li>
+    <li>Withdrawals: No penalties, access within 3–5 working days</li>
+  </ul>
 
   <div class="section-divider">✅ Proposed Alternative — £25,000 Family Investment Loan</div>
-  <p>You borrow £25,000 for up to 18 months, with fixed £250/month repayments — framed as “interest,” but formally classified as capital repayment to avoid tax.
-    • Capital protected — fully repaid by Jan 2027
-    • £250/month = £3,000/year — 12% tax-free return
-    • Deed of Trust links repayment to your flat
-    • Simple loan agreement formalised</p>
+  <ul>
+    <li>You borrow <strong>£25,000</strong> for up to 18 months</li>
+    <li>Fixed monthly repayments: <strong>£250</strong></li>
+    <li>Classed as capital repayment — avoids tax implications</li>
+    <li><strong>12% return</strong> on capital (£3,000/year)</li>
+    <li>Deed of Trust links repayment to your flat</li>
+    <li>Fully repaid by January 2027</li>
+    <li>Simple loan agreement formalised</li>
+  </ul>
 
   <div class="section-divider">📉 Halifax Context</div>
-  <p>• Mortgage balance: £72,000
-    • Interest: 4.83%, ~£295–£300/month
-    • Paying down £10k saves £120–£150/month = ~£1,800/year</p>
+  <ul>
+    <li>Mortgage balance: £72,000</li>
+    <li>Interest rate: 4.83%</li>
+    <li>Interest paid: ~£295–£300/month</li>
+    <li>Using £10k to reduce balance saves ~£120–£150/month</li>
+    <li>Annual saving: <strong>~£1,800</strong></li>
+  </ul>
 
   <div class="section-divider">🔁 Flexibility</div>
-  <p>• Employment in 6–8 months allows increased repayments
-    • Partner remortgage option:
-      - Flat value: ~£150,000+
-      - LTV: < 40%</p>
+  <ul>
+    <li>Employed within 6–8 months → repayments increase, term shortens</li>
+    <li>Partner remortgage options if needed:</li>
+    <ul>
+      <li>Flat value: ~£150,000+</li>
+      <li>Loan-to-value: Under 40% with £25k loan</li>
+    </ul>
+  </ul>
 
   <div class="section-divider">🔄 Comparison: D’s Financial Position</div>
-  <p>
-    • Capital Risk: None → None (secured)<br>
-    • Income Certainty: None → Fixed (£250/month)<br>
-    • Return: 3.3% (random) → 12% (guaranteed)<br>
-    • Liquidity Risk: All tied up → 50% still live<br>
-    • Emotional ROI: Passive → Supports D, TP, and home</p>
+  <ul>
+    <li><strong>Capital Risk:</strong> None → None (secured & guaranteed)</li>
+    <li><strong>Income Certainty:</strong> None → Fixed £250/month</li>
+    <li><strong>Annualised Return:</strong> ~3.3% (random) → 12% (guaranteed)</li>
+    <li><strong>Liquidity Risk:</strong> 100% tied up → £25k used, £25k still live</li>
+    <li><strong>Emotional ROI:</strong> Passive only → Fox helps D, TP, home tasks</li>
+    <li><strong>Repayment Visibility:</strong> None → Linked to flat equity</li>
+  </ul>
 
   <div class="section-divider">💡 Strategic Wins</div>
-  <p>• Retraining into £300–£400/day roles
-    • Visit D every 4 weeks
-    • Help TP, manage property, fix flat
-    • Roger’s dental covered
-    • D benefits financially and emotionally</p>
+  <ul>
+    <li>Unlock time to retrain into £300–£400/day roles</li>
+    <li>Visit D every 4 weeks</li>
+    <li>Help TP reduce load and manage property logistics</li>
+    <li>Flat prepared for remortgage or future sale</li>
+    <li>Roger’s £1,500 dental treatment — covered</li>
+    <li>D sees real benefit — financial and emotional</li>
+  </ul>
 </body>
 </html>
