--- a/loan-details.html
+++ b/loan-details.html
@@ -34,7 +34,7 @@
 <body>
   <img src="assets/images/wizard.png" class="back-link" alt="Back" onclick="window.location.href='real.html'" />
   <div class="section-divider">🔍 Current Setup (Premium Bonds vs Halifax Mortgage)</div>
-  <ul>
+  <ul style='margin-bottom: 1em; line-height: 1.6;'>
     <li><strong>£50,000 in Premium Bonds</strong></li>
     <li>Capital: Fully protected</li>
     <li>Returns: Based on monthly prize draws (~3.3% expected)</li>
@@ -43,7 +43,7 @@
   </ul>
 
   <div class="section-divider">✅ Proposed Alternative — £25,000 Family Investment Loan</div>
-  <ul>
+  <ul style='margin-bottom: 1em; line-height: 1.6;'>
     <li>You borrow <strong>£25,000</strong> for up to 18 months</li>
     <li>Fixed monthly repayments: <strong>£250</strong></li>
     <li>Classed as capital repayment — avoids tax implications</li>
@@ -54,7 +54,7 @@
   </ul>
 
   <div class="section-divider">📉 Halifax Context</div>
-  <ul>
+  <ul style='margin-bottom: 1em; line-height: 1.6;'>
     <li>Mortgage balance: £72,000</li>
     <li>Interest rate: 4.83%</li>
     <li>Interest paid: ~£295–£300/month</li>
@@ -63,17 +63,17 @@
   </ul>
 
   <div class="section-divider">🔁 Flexibility</div>
-  <ul>
+  <ul style='margin-bottom: 1em; line-height: 1.6;'>
     <li>Employed within 6–8 months → repayments increase, term shortens</li>
     <li>Partner remortgage options if needed:</li>
-    <ul>
+    <ul style='margin-bottom: 1em; line-height: 1.6;'>
       <li>Flat value: ~£150,000+</li>
       <li>Loan-to-value: Under 40% with £25k loan</li>
     </ul>
   </ul>
 
   <div class="section-divider">🔄 Comparison: D’s Financial Position</div>
-  <ul>
+  <ul style='margin-bottom: 1em; line-height: 1.6;'>
     <li><strong>Capital Risk:</strong> None → None (secured & guaranteed)</li>
     <li><strong>Income Certainty:</strong> None → Fixed £250/month</li>
     <li><strong>Annualised Return:</strong> ~3.3% (random) → 12% (guaranteed)</li>
@@ -83,7 +83,7 @@
   </ul>
 
   <div class="section-divider">💡 Strategic Wins</div>
-  <ul>
+  <ul style='margin-bottom: 1em; line-height: 1.6;'>
     <li>Unlock time to retrain into £300–£400/day roles</li>
     <li>Visit D every 4 weeks</li>
     <li>Help TP reduce load and manage property logistics</li>
