--- a/loan-details.html
+++ b/loan-details.html
@@ -32,7 +32,7 @@
   </style>
 </head>
 <body>
-  <img src="assets/images/wizard.png" class="back-link" alt="Back" onclick="window.location.href='real.html'" />
+  <a href="real.html" style="position: fixed; top: 20px; right: 20px; font-weight: bold; text-decoration: underline;">← Back to Summary</a>
   <div class="section-divider">🔍 Current Setup (Premium Bonds vs Halifax Mortgage)</div>
   <ul style='margin-bottom: 1em; line-height: 1.6;'>
     <li><strong>£50,000 in Premium Bonds</strong></li>
